--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^17.0.15",
     "react": "^17.0.2",
+    "react-animation-carousel": "^1.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.36.0",
